--- a/index.html
+++ b/index.html
@@ -428,7 +428,6 @@
       </section>
 
       <!-- Section-4 (Portfolio) -->
-      <!-- Section-4 (Portfolio) -->
       <section class="portfolio-section">
         <!-- Section-4 -->
         <div class="container">
@@ -477,7 +476,7 @@
                     height="280"
                   />
                   <source
-                    srcset="./images/foto6@3x.jpg"
+                    srcset="./images/foto6@3.jpg"
                     media="(max-width: 1157px)"
                     width="356"
                     height="300"
@@ -535,26 +534,6 @@
             </li>
             <li class="start-apps">
               <div class="div-img">
-                <picture class="picture-cont">
-                  <source
-                    srcset="./images/foto8@2x.jpg"
-                    media="(max-width: 767px)"
-                    width="288"
-                    height="280"
-                  />
-                  <source
-                    srcset="./images/foto8@3x.jpg"
-                    media="(max-width: 1157px)"
-                    width="356"
-                    height="300"
-                  />
-                  <img
-                    src="./images/foto8.jpg"
-                    alt="Taxi Service"
-                    width="360"
-                    height="420"
-                  />
-                </picture>
                 <p class="paragraf">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -568,26 +547,6 @@
             </li>
             <li class="start-apps">
               <div class="div-img">
-                <picture class="picture-cont">
-                  <source
-                    srcset="./images/foto9@2x.jpg"
-                    media="(max-width: 767px)"
-                    width="288"
-                    height="280"
-                  />
-                  <source
-                    srcset="./images/foto9@3x.jpg"
-                    media="(max-width: 1157px)"
-                    width="356"
-                    height="300"
-                  />
-                  <img
-                    src="./images/foto9.jpg"
-                    alt="Taxi Service"
-                    width="360"
-                    height="420"
-                  />
-                </picture>
                 <p class="paragraf">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -601,26 +560,6 @@
             </li>
             <li class="start-apps">
               <div class="div-img">
-                <picture class="picture-cont">
-                  <source
-                    srcset="./images/foto10@2x.jpg"
-                    media="(max-width: 767px)"
-                    width="288"
-                    height="280"
-                  />
-                  <source
-                    srcset="./images/foto10@3x.jpg"
-                    media="(max-width: 1157px)"
-                    width="356"
-                    height="300"
-                  />
-                  <img
-                    src="./images/foto10.jpg"
-                    alt="Taxi Service"
-                    width="360"
-                    height="420"
-                  />
-                </picture>
                 <p class="paragraf">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
