--- a/index.html
+++ b/index.html
@@ -33,12 +33,11 @@
     <object type="image/svg+xml" data="icons.svg"></object>
 
     <header class="header">
-      <div class="container-header container">
+      <div class="container">
         <nav class="navigation">
           <a class="title" href="">
             Web<span class="logo-studio">Studio</span>
           </a>
-          <!-- opeb-btn -->
           <ul class="header-list">
             <li>
               <a class="nav-link" href="./index.html">Studio</a>
@@ -53,20 +52,19 @@
         </nav>
 
         <address class="address">
-          <ul class="address-ul">
+          <ul class="adress-ul">
             <li>
-              <a class="address_link" href="mailto:info@devstudio.com"
+              <a class="adress_link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
             <li>
-              <a class="address_link" href="tel:+110001111111"
+              <a class="adress_link" href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
               >
             </li>
           </ul>
         </address>
-
         <div class="div-open-btn">
           <button type="button" class="menu-open-btn">
             <svg
@@ -81,7 +79,6 @@
           </button>
         </div>
       </div>
-      <!-- New header- section -->
     </header>
 
     <main>
@@ -107,7 +104,7 @@
                   <use href="./images/icons.svg#icon-antena"></use>
                 </svg>
               </div>
-              <h3 class="section-list-item-title-header">Strategy</h3>
+              <h3 class="section-list-item-title">Strategy</h3>
               <p class="section-list-item-paragraph">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
@@ -121,7 +118,7 @@
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h3 class="section-list-item-title-header">Punctuality</h3>
+              <h3 class="section-list-item-title">Punctuality</h3>
               <p class="section-list-item-paragraph">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
@@ -135,7 +132,7 @@
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <h3 class="section-list-item-title-header">Diligence</h3>
+              <h3 class="section-list-item-title">Diligence</h3>
               <p class="section-list-item-paragraph">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
@@ -149,7 +146,7 @@
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="section-list-item-title-header">Technologies</h3>
+              <h3 class="section-list-item-title">Technologies</h3>
               <p class="section-list-item-paragraph">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
@@ -476,7 +473,7 @@
                     height="280"
                   />
                   <source
-                    srcset="./images/foto6@3.jpg"
+                    srcset="./images/foto6@3x.jpg"
                     media="(max-width: 1157px)"
                     width="356"
                     height="300"
@@ -534,6 +531,26 @@
             </li>
             <li class="start-apps">
               <div class="div-img">
+                <picture class="picture-cont">
+                  <source
+                    srcset="./images/foto8@2x.jpg"
+                    media="(max-width: 767px)"
+                    width="288"
+                    height="280"
+                  />
+                  <source
+                    srcset="./images/foto8@3x.jpg"
+                    media="(max-width: 1157px)"
+                    width="356"
+                    height="300"
+                  />
+                  <img
+                    src="./images/foto8.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                    height="420"
+                  />
+                </picture>
                 <p class="paragraf">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -547,6 +564,26 @@
             </li>
             <li class="start-apps">
               <div class="div-img">
+                <picture class="picture-cont">
+                  <source
+                    srcset="./images/foto9@2x.jpg"
+                    media="(max-width: 767px)"
+                    width="288"
+                    height="280"
+                  />
+                  <source
+                    srcset="./images/foto9@3x.jpg"
+                    media="(max-width: 1157px)"
+                    width="356"
+                    height="300"
+                  />
+                  <img
+                    src="./images/foto9.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                    height="420"
+                  />
+                </picture>
                 <p class="paragraf">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -560,6 +597,26 @@
             </li>
             <li class="start-apps">
               <div class="div-img">
+                <picture class="picture-cont">
+                  <source
+                    srcset="./images/foto10@2x.jpg"
+                    media="(max-width: 767px)"
+                    width="288"
+                    height="280"
+                  />
+                  <source
+                    srcset="./images/foto10@3x.jpg"
+                    media="(max-width: 1157px)"
+                    width="356"
+                    height="300"
+                  />
+                  <img
+                    src="./images/foto10.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                    height="420"
+                  />
+                </picture>
                 <p class="paragraf">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
