--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <object type="image/svg+xml" data="icons.svg"></object>
 
     <header class="header">
-      <div class="container">
+      <div class="container-header container">
         <nav class="navigation">
           <a class="title" href="">
             Web<span class="logo-studio">Studio</span>
@@ -50,6 +50,7 @@
             </li>
           </ul>
         </nav>
+
         <address class="address">
           <ul class="adress-ul">
             <li>
