--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </nav>
 
         <address class="address">
-          <ul class="adress-ul">
+          <ul class="address-ul">
             <li>
               <a class="adress_link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
