--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
     <footer class="footer">
       <!-- Логотип і параграф -->
 
-      <div class="container-full container">
+      <div class="container container-full">
         <div class="text-footer">
           <a class="title-footer" href="./index.html">
             Web<span class="logo">Studio</span>
