--- a/index.html
+++ b/index.html
@@ -734,7 +734,7 @@
         </div>
       </div>
     </footer>
-    <!-- <div class="new-section">
+    <div class="new-section is-open" id="new-modal">
       <div class="modal">
         <button class="modal-button" type="button">
           <svg
@@ -746,13 +746,11 @@
           >
             <use href="./images/icons.svg#close"></use>
           </svg>
-          Button
         </button>
         <p class="modal-content">
           Leave your contacts and we will call you back
         </p>
         <form class="modal-form">
-          The 1st div
           <div class="form-div">
             <label for="user-name" class="label-style">Name</label>
             <div class="form-container-input">
@@ -768,7 +766,6 @@
             </div>
           </div>
 
-          The 2nd div
           <div class="form-div">
             <label for="user-tel" class="label-style">Phone</label>
             <div class="form-container-input">
@@ -784,7 +781,6 @@
             </div>
           </div>
 
-          The 3rd div
           <div class="form-div">
             <label for="user-email" class="label-style">Email</label>
             <div class="form-container-input">
@@ -800,7 +796,6 @@
             </div>
           </div>
 
-          The 4th div
           <div class="form-new-div">
             <label for="user-comment" class="label-style">Comment</label>
             <textarea
@@ -811,7 +806,6 @@
             ></textarea>
           </div>
 
-          The 5th div
           <div class="form-lebel-checkbox">
             <input
               class="input-title visually-hidden"
@@ -831,10 +825,9 @@
             </label>
           </div>
 
-          The Button
           <button class="button-bottom" type="button">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
   </body>
 </html>
