--- a/index.html
+++ b/index.html
@@ -650,25 +650,16 @@
                   <source
                     srcset="./images/foto9@2x.jpg"
                     media="(max-width: 767px)"
-                    width="288"
-                    height="280"
                   />
                   <source
                     srcset="./images/foto9@3x.jpg"
                     media="(max-width: 1157px)"
-                    width="356"
-                    height="300"
                   />
                   <source
                     srcset="./images/foto9.jpg"
                     media="(min-width: 1157px)"
                   />
-                  <img
-                    src="./images/foto9@1x.jpg"
-                    alt="Taxi Service"
-                    width="360"
-                    height="420"
-                  />
+                  <img src="./images/foto9@1x.jpg" alt="Taxi Service" />
                 </picture>
                 <p class="paragraf">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -687,14 +678,10 @@
                   <source
                     srcset="./images/foto10@2x.jpg"
                     media="(max-width: 767px)"
-                    width="288"
-                    height="280"
                   />
                   <source
                     srcset="./images/foto10@3x.jpg"
                     media="(max-width: 1157px)"
-                    width="356"
-                    height="300"
                   />
                   <source
                     srcset="./images/foto10.jpg"
